<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Buzon.FragmentBuzonFormulario">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="372dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textoBuzon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:padding="10dp"
                android:text="@string/txtvBuzon"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textoNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/cuadro_textview_buzon"
                    android:padding="5dp"
                    android:text="@string/txtvNombre"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/colorDarkGreenHelpets" />

                <EditText
                    android:id="@+id/campoNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/marco_campos_buzon"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textoTelefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/cuadro_textview_buzon"
                    android:padding="5dp"
                    android:text="@string/txtvTeléfonoFormulario"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/colorDarkGreenHelpets" />

                <EditText
                    android:id="@+id/campoTelefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/marco_campos_buzon"
                    android:ems="10"
                    android:inputType="phone"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textoCorreo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/cuadro_textview_buzon"
                    android:padding="5dp"
                    android:text="@string/txtvCorreo"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/colorDarkGreenHelpets" />

                <EditText
                    android:id="@+id/campoCorreo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/marco_campos_buzon"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textoMensaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/cuadro_textview_buzon"
                    android:padding="5dp"
                    android:text="@string/txtvMensaje"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/colorDarkGreenHelpets" />

                <EditText
                    android:id="@+id/campoMensaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/cuadro_buzon_mensaje"
                    android:ems="10"
                    android:hint="@string/formularioContactoMensajeHint"
                    android:inputType="textMultiLine"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            </LinearLayout>

            <Button
                android:id="@+id/botonEnviar"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:background="@mipmap/boton_enviar" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>